--- a/app/src/main/res/layout/shop_spinner_row.xml
+++ b/app/src/main/res/layout/shop_spinner_row.xml
@@ -1,4 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_marginBottom="20dp"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
+<android.support.v7.widget.CardView android:layout_width="match_parent"
+    android:layout_height="60dp"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
+    android:layout_margin="10dp"
+    card_view:cardCornerRadius="5dp"
+    card_view:cardElevation="5dp"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -23,3 +35,5 @@
         android:textSize="20dp" />
 
 </RelativeLayout>
+</android.support.v7.widget.CardView>
+</LinearLayout>
