--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -8,7 +8,7 @@
             android:id="@+id/nav_home"
             android:icon="@drawable/home"
             android:title="Home" />
-        <item
+       <!-- <item
             android:id="@+id/nav_search"
             android:icon="@drawable/search"
             android:title="Nearby" />
@@ -19,7 +19,7 @@
         <item
             android:id="@+id/nav_wishlist"
             android:icon="@drawable/wishlist"
-            android:title="Wish List" />
+            android:title="Wish List" />-->
     </group>
 
     <item android:title="">
