--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,8 +7,18 @@
     tools:context="com.example.gehna.shopapp.SplashActivity">
 
     <ImageView
+        android:id="@+id/image"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="@drawable/app_logo"
         android:layout_centerInParent="true"/>
+    <TextView
+        android:id="@+id/textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="FindYourStore"
+        android:layout_below="@+id/image"
+        android:layout_centerHorizontal="true"
+        android:textSize="30dp"
+        android:fontFamily="@font/permanentmarker_regular" />
 </RelativeLayout>
