--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -2,7 +2,7 @@
 <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/animation_list"
+    android:background="#eff0f2"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- android:background="#eff0f2" -->
 
