--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -51,6 +51,7 @@
         android:layout_marginTop="84dp"
         android:fontFamily="@font/permanentmarker_regular"
         android:gravity="center"
+        android:textColor="#000"
         android:text="RATINGS"
         android:textSize="45dp" />
 
