--- a/app/src/main/res/layout/slide.xml
+++ b/app/src/main/res/layout/slide.xml
@@ -8,7 +8,7 @@
     <TextView
         android:gravity="center"
         android:id="@+id/title"
-        android:textColor="#fff"
+        android:textColor="#000"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
