--- a/app/src/main/res/layout/activity_store__details.xml
+++ b/app/src/main/res/layout/activity_store__details.xml
@@ -95,11 +95,12 @@
         android:layout_marginLeft="60dp"
         android:layout_height="wrap_content"
         android:text="Log Out"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/round_button"
         android:textColor="#fff"
         android:textStyle="bold"
-        android:layout_below="@+id/style"
+        android:layout_below="@+id/submit"
+        android:layout_marginBottom="20dp"
         android:layout_centerHorizontal="true"/>
 
 
